Bug fixed: contact page mobile / iframe overlapping hours section

--- a/src/components/pages/Contact.sass
+++ b/src/components/pages/Contact.sass
@@ -24,7 +24,7 @@
       height: 50vh
       iframe
         width: 100%
-        height: 30vh
+        height: 28vh
         margin: auto
 
 @media only screen and (min-width: 769px)
